fix: 修复悬浮边框

--- a/MY/11/style.css
+++ b/MY/11/style.css
@@ -16,7 +16,7 @@ body {
 .btn {
   color: #0eb97c;
   font-size: 2em;
-  border: 2px solid;
+  border: 2px solid #0eb97c;
   background: none;
   padding: 20px 40px;
   text-transform: uppercase;
