--- a/Desafios/dia 14/style.css
+++ b/Desafios/dia 14/style.css
@@ -1,26 +1,29 @@
 body {
-	height: 100vh;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	font-family: 'Lato', sans-serif;
-	background-color: rgba(10, 43, 48, 0.363);
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: "Lato", sans-serif;
+  background-color: rgba(10, 43, 48, 0.363);
 }
 
 h1 {
-	font-size: 200px;
-	text-align: center;
-	text-transform: uppercase;
-	background: url(image.jpg);
-	-webkit-background-clip: text;
-	color: transparent;
-	animation: text-background 20s linear infinite;
+  font-size: 200px;
+  text-align: center;
+  text-transform: uppercase;
+  background: url(image.jpg);
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
+  animation: text-background 20s linear infinite;
 }
 
 @keyframes text-background {
+  from {
+    background-position: 0 0;
+  }
 
-	from { background-position: 0 0 }
-
-	to { background-position: 100% 100% }
-
-} 
+  to {
+    background-position: 100% 100%;
+  }
+}
